# ProteinDmn

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test_actions.yml
Output/: transcript_domains_DE.csv  transcript_domains_DE.xlsx
Utils/: ensembl_rest_utils.py  rest_api_utils.py  toml_utils.py  uniprot_utils.py  utils.py
config/: config.toml
data/: candidate_info.csv  transcript_list.txt  transcript_list_DE.txt
tests/: test_config.py
